<resources>
    <string name="app_name">HUITDDURU</string>

    <!--  Sign  -->
    <string name="sign_in_description">여러분의 이야기를\n들려주세요.</string>
    <string name="sign_in_email_hint">이메일</string>
    <string name="sign_in_password_hint">비밀번호</string>
    <string name="login_text">로그인</string>
    <string name="recoomend_sign_up">휘뚜루마뚜루 회원가입</string>
    <string name="sign_up_to_login">로그인으로</string>
    <string name="sign_up_insert_your_info">정보를\n입력해주세요.</string>
    <string name="sign_up_certify_code">인증코드를\n입력해주세요.</string>
    <string name="sign_up_profile">마지막으로\n회원정보를 등록해주세요.</string>
    <string name="sign_up_email_hint">이메일</string>
    <string name="sign_up_password_hint">비밀번호 (8~16자)</string>
    <string name="sign_up_password_confirm">비밀번호 확인</string>
    <string name="sign_up_next">다음</string>
    <string name="sign_up_certify_hint">인증코드 6자리</string>
    <string name="sign_up_nickname_hint">닉네임</string>
    <string name="sign_up_description_hint">한줄 소개 (선택)</string>
    <string name="sign_up_explain">프로필 사진을 선택하지 않아도\n기본 프로필 사진이 적용되요.</string>
    <string name="sign_up_do">회원가입</string>
    <string name="sign_up_successful">회원가입 완료!</string>
    <string name="sign_up_successful_description">가입이 완료되었어요.\n로그인 후 여러분의\n이야기를 들려주세요.</string>
    <string name="sign_up_do_login">로그인 하기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  home  -->
    <string name="home_has_not_diary">교환중인 일기가 없습니다.</string>
    <string name="home_mate_terminate">교환 그만하기</string>

    <!--  write  -->
    <string name="write_notify_title">교환 중인 일기가 있습니다.</string>
    <string name="write_notify_content">알림을 클릭하면 교환 일기를 작성할 수 있습니다.</string>
    <string name="write_diary">일기 작성</string>
    <string name="write_title_hint">제목</string>
    <string name="write_date_hint">날짜</string>
    <string name="write_feeling_hint">기분</string>
    <string name="write_content_hint">내용</string>
    <string name="write_add_image_hint">사진 추가하기</string>
    <string name="write_save_hint">저장</string>
    <string name="happy">&#128518;</string>
    <string name="sad">&#128557;</string>
    <string name="angry">&#129324;</string>
    <string name="freak">&#128534;</string>
    <string name="think">&#129300;</string>
    <string name="party">&#129395;</string>
    <string name="love">&#128536;</string>
    <string name="star">&#129321;</string>
    <string name="bored">&#128528;</string>
    <string name="dislike">&#128547;</string>

    <!--  mypage  -->
    <string name="profile_edit">정보 수정</string>
    <string name="diary_text">일기장</string>
    <string name="profile_edit_text">프로필 수정</string>
    <string name="save_button_text">저장하기</string>
    <string name="resign_text">탈퇴하기</string>
    <string name="description_edit_hint">한 줄 소개 변경</string>
    
    <!--  exchange  -->
    <string name="exchange_title">일기 메이트 연결</string>
    <string name="exchange_random_title">무작위 사용자\n찾아보기</string>
    <string name="exchange_random_description">무작위 사용자를 찾아\n일기 교환을 시작하세요.</string>
    <string name="exchange_friends_title">친구와\n교환하기</string>
    <string name="exchange_friends_description">주어진 일기 코드를 공유해\n친구와 일기를 교환하세요.</string>
    <string name="exchange_prev_text">교환 페이지로</string>
    <string name="exchange_your_code">친구초대 코드</string>
    <string name="exchange_recommend_your_friends">친구에게 코드를 보내\n일기 교환을 시작하세요!</string>
    <string name="exchange_input_code_title">친구에게 받은 코드 입력</string>
    <string name="exchange_input_code_hint">친구코드 입력</string>
    <string name="exchange_random_matching_title">무작위 사용자 찾기</string>
    <string name="exchange_random_matching">무작위로 사용자를 찾는 중입니다.\n잠시만 기다려 주세요.</string>
    <string name="find_mate_title">무작위 사용자 찾기</string>
    <string name="find_user">사용자를 발견했습니다!</string>
    <string name="random_match_accept">수락</string>
    <string name="random_match_refuse">거절</string>
    <string name="find_mate_refuse_title">일기 교환 거절</string>
    <string name="find_mate_refuse_description">일기 교환이 거절되었습니다.</string>
    <string name="match_try">다시 매칭하기</string>
    <string name="move_to_back">이전페이지로 돌아가기</string>
    <string name="find_mate_success_title">일기 교환 시작!</string>
    <string name="find_mate_success_description">이제부터 일기를 교환할 수 있습니다.</string>
    <string name="exchange_diary_start">일기 교환하기</string>
</resources>