<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="com.example.huitdduru.view.exchange.LocalMateFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.exchange.LocalMateFragment">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/prev_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_right_arrow"
                android:background="@null"
                android:onClick="@{() -> fragment.activity.finish()}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exchange_prev_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:fontFamily="@font/font_noto_sans_kr_regular"
                android:includeFontPadding="false"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="110dp"
            android:text="@string/exchange_your_code"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:fontFamily="@font/font_noto_sans_kr_bold"
            android:includeFontPadding="false"/>

        <TextView
            android:id="@+id/code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="777777"
            android:textSize="28sp"
            android:textColor="@color/primary"
            android:fontFamily="@font/font_noto_sans_kr_bold"
            android:includeFontPadding="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/exchange_recommend_your_friends"
            android:textSize="16sp"
            android:textColor="@color/gray2"
            android:gravity="center"
            android:fontFamily="@font/font_noto_sans_kr_regular"
            android:includeFontPadding="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:text="@string/exchange_input_code_title"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:fontFamily="@font/font_noto_sans_kr_bold"
            android:includeFontPadding="false"/>

        <EditText
            android:id="@+id/code_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="140dp"
            android:layout_marginTop="30dp"
            android:hint="@string/exchange_input_code_hint"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/font_noto_sans_kr_regular"
            android:includeFontPadding="false"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/match_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/accept_btn_background"
            android:text="@string/exchange_diary_start"
            android:fontFamily="@font/font_noto_sans_kr_bold"
            android:textSize="16sp"
            android:includeFontPadding="false"/>


    </LinearLayout>

</layout>

