<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.example.huitdduru.view.exchange.RandomMateFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.exchange.RandomMateFragment">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/prev_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_right_arrow"
                android:onClick="@{() -> fragment.backPress()}"
                android:background="@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exchange_prev_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:fontFamily="@font/font_noto_sans_kr_regular"
                android:includeFontPadding="false"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:text="@string/exchange_random_matching_title"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:fontFamily="@font/font_noto_sans_kr_bold"
            android:includeFontPadding="false"
            android:layout_gravity="center"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/matching"
            app:lottie_autoPlay="true"
            android:scaleX="2"
            android:scaleY="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/exchange_random_matching"
            android:textSize="14sp"
            android:textColor="@color/gray2"
            android:fontFamily="@font/font_noto_sans_kr_regular"
            android:includeFontPadding="false"/>

    </LinearLayout>

</layout>

